HelpSource/scdoc.css
/* ... */
.jump {
    text-align: right;
    font-size: 9pt;
    color: #555;
}
.jump a {
    font-weight: bold;
    padding-top:0;
    margin-top:0;
}

a.footnote {
    font-size: 9pt;
    top: -0.1em;
}
div.footnotes {
    border-top: 1px solid #aaa;
    margin-left: 2em;
    margin-top: 3em;
    margin-right: 2em;
}
div.footnote {
    margin-bottom: 0.5em;
    margin-top: 0.5em;
    font-size: 9pt;
}

.soft {
    color: #777;
}

h1 {
    margin: 0.1em 0;
    font-size: 2.6em;
    margin-bottom: 0em;
}

h2 {
    border-bottom: 1px solid #ddd;
    margin-top: 1.0em;
    text-align: left;
    margin-bottom: 2px;
    font-size: 1.6em;
}

h3 {
    margin-top: 2.0em;
    margin-bottom: 1px;
    text-align: left;
    font-size: 1.4em;
}

h4 {
    margin-top: 1em;
    margin-bottom: 0em;
    margin-left: 0em;
    color: #777;
}

/* http://nicolasgallagher.com/jump-links-and-viewport-positioning/demo/#method-C */
.anchor {
    margin-top: -3em !important;
    padding-top: 3em !important;
}

dt {
    font-weight: bold;
}
dd {
    margin-top: 0.25em;
    margin-bottom: 1.25em;
}

code, pre {
    font-family: monospace;
    font-size: 9pt;
}

pre {
    border-left: 2px solid #e0e0e0;
    padding-left: 1em;
}

code.code, pre.code {
}

pre.code {

}

.image {
    text-align: center;
    margin: 2em;
    font-size: 9pt;
}

.image img {
    margin-bottom: 1em;
}

.methprefix {
    font-weight: normal;
    color: #777;
    padding-right: 0.5em;
    margin-left: -1em;
}

.method-code {
    font-family: monospace;
    font-weight: normal;
    font-size: 1.05em !important;
    margin-bottom: 0em;
    margin-top: 0.75em;
    padding: 0.25em;
    border: none;
    padding-left: 4em;
    text-indent: -4em;
}

a.method-name {
    color: black;
    font-weight: bold;
    margin-top: -3em;
    padding-top: 3em;
}

.method {
    margin-left: 2em;
    margin-bottom: 2em;
}

.argstr {
    white-space: nowrap;
}

.extmethod {
    font-size: 9pt;
    color: #444;
    padding-left: 0.2em;
}

.supmethod {
    font-size: 9pt;
    color: #444;
    padding-left: 0.2em;
}

table.arguments {
    margin-left: 1.5em;
    margin-bottom: 0em;
    margin-top: 0.5em;
    border-collapse: collapse;
}

table.arguments td.argumentname, td.argumentdesc {
    vertical-align: top;
    border: none;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
}

td.argumentname {
    font-weight: bold;
}

div.returnvalue {
    margin-left: 2em;
}

td p {
    margin-top: 0em;
}

.note, .warning {
/*    border-left: 4px solid #eea;*/
    background: #f7f7d7;
    padding: 0.5em;
    margin-top: 1em;
    margin-bottom: 1em;
}
.notelabel, .warninglabel {
    font-weight: bold;
}
.warninglabel {
    color: red;
}

/*.version {
    font-size: 9pt;
    border-top: 1px solid #bbb;
    color: #999;
    text-align: right;
    margin-top: 2em;
}*/

.doclink {
    font-size: 9pt;
    color: #888;
    text-align: right;
    margin-top: 2em;
    margin-bottom: 2em;
    border-top: 1px solid #ddd;
}
.doclink a {
    color: #444;
}

#sidetoc {
    position: fixed;
    display: block;
    width: 18em;
    left: 0px;
    margin: 0;
    padding: 10px;
    height: 100%;
    overflow: auto;
/*    background: #eee;*/
    background: #fff;
    border-right: 1px solid #bbb;
}

#sidetoc a:hover {
    text-decoration: none;
    color: black;
}

#toc-container {
    float: right;
}

#toc {
    width: 20em;
    max-height: calc(100vh - 3em);
    overflow-y: auto;
    overflow-x: hidden;
    overflow-wrap: break-word;
    right: 0;
    line-height: 130%;
}
#toctitle {
    font-weight: bold;
    font-size: 120%;
    margin: 0.7em 0.5em;
    color: #333;
}

li {
    padding-bottom: 0.5em;
}

ul.toc {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
ul.toc ul {
    margin-left: 1em;
}
ul.toc li {
    margin: 0;
    padding: 0;
}

ul.toc li a {
    display: block;
    padding: 0 8px 0 8px;
}

ul.toc li a:hover {
    background: #eee;
}

.toc1 {
    font-weight: bold;
}
.toc1 a {
    color: #444;
}
.toc2 {
    font-weight: normal;
}
.toc2 a {
    color: #444;
}
.toc3 {
    font-family: monospace;
    font-weight: normal;
/*    font-size: 9.5pt;*/
}
.toc3 a {
    color: #555;
}

ul.tree, ul.tree ul {
 list-style-type: none;
 background: url(images/vline.png) repeat-y;
 margin: 0;
 padding: 0;
 margin-left: 1em;
}

ul.tree ul {
 margin-left: 15px;
}

ul.tree li {
 margin: 0;
 padding: 0 12px;
 line-height: 20px;
 background: url(images/node.png) no-repeat;
/* color: #369;
 font-weight: bold;*/
}

ul.tree li:last-child {
 background: #fff url(images/lastnode.png) no-repeat;
}

:target {
    border-bottom: 6px solid rgba(255,255,0,0.4);
    padding-top:20px;
    margin-top:-20px;
}

a.undoc {
    color: #88b;
    text-decoration: line-through;
}

/* auto class links. note that color can be overridden by prettify rules below */
a.clslnk {
}

/* Pretty printing styles. Used with prettify.js. */

.str { color: #070; } /* strings */
.kwd { color: #880; } /* special values like true, nil.. */
.com { color: #822; } /* comments */
.typ { color: #008; } /* class names */
.lit { color: #066; } /* numbers and character literals */
.pun { color: #555; } /* punctuation */
.pln { color: #000; } /* plain text, methods and variable names */
.tag { color: #059; } /* special variables like super, thisProcess... */
.dec { color: #508; } /* declarations like var, const... */
.atn { color: #285; } /* symbols */
.atv { color: #750; } /* environment vars */

/* Specify class=linenums on a pre to get line numbering */
ol.linenums { margin-top: 0; margin-bottom: 0 } /* IE indents via margin-left */
li.L0,
li.L1,
li.L2,
li.L3,
li.L5,
li.L6,
li.L7,
li.L8 { list-style-type: none }
/* Alternate shading for lines */
li.L1,
li.L3,
li.L5,
li.L7,
li.L9 { background: #eee }
/* ... */

